Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,8 +5,15 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-  <form>
-
+  <form action="/team" method="post">
+    <input type="text" id="team_name"> Team Name: </input>
+    <input type="text" id="coach"> Coach: </input>
+    <input type="text" id="point_guard"> Point Guard: </input>
+    <input type="text" id="shooting_guard"> Shooting Guard: </input>
+    <input type="text" id="small_forward"> Small Forward: </input>
+    <input type="text" id="power_forward"> Power Forward: </input>
+    <input type="text" id="center"> Center: </input>
+    <button id="Submit"> Submit </button>
   </form>
  </body>
 </html>
