Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,14 +6,14 @@
  </head>
  <body>
   <form action="/team" method="post">
-    <input type="text" id="team_name"> Team Name: </input>
-    <input type="text" id="coach"> Coach: </input>
-    <input type="text" id="point_guard"> Point Guard: </input>
-    <input type="text" id="shooting_guard"> Shooting Guard: </input>
-    <input type="text" id="small_forward"> Small Forward: </input>
-    <input type="text" id="power_forward"> Power Forward: </input>
-    <input type="text" id="center"> Center: </input>
-    <button id="Submit"> Submit </button>
+    Team Name:<input type="text" id="team_name">  </input> <br>
+    Coach:<input type="text" id="coach">  </input>
+    Point Guard:<input type="text" id="point_guard">  </input>
+    Shooting Guard:<input type="text" id="shooting_guard">  </input>
+    Small Forward:<input type="text" id="small_forward">  </input>
+    Power Forward:<input type="text" id="power_forward">  </input>
+    Center:<input type="text" id="center">  </input>
+    Submit <button id="Submit">  </button>
   </form>
  </body>
 </html>
