Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,13 +7,13 @@
  <body>
   <form action="/team" method="post">
     Team Name:<input type="text" id="team_name">  </input> <br>
-    Coach:<input type="text" id="coach">  </input>
-    Point Guard:<input type="text" id="point_guard">  </input>
-    Shooting Guard:<input type="text" id="shooting_guard">  </input>
-    Small Forward:<input type="text" id="small_forward">  </input>
-    Power Forward:<input type="text" id="power_forward">  </input>
-    Center:<input type="text" id="center">  </input>
-    Submit <button id="Submit">  </button>
+    Coach:<input type="text" id="coach">  </input> <br>
+    Point Guard:<input type="text" id="point_guard">  </input> <br>
+    Shooting Guard:<input type="text" id="shooting_guard">  </input> <br>
+    Small Forward:<input type="text" id="small_forward">  </input> <br>
+    Power Forward:<input type="text" id="power_forward">  </input> <br>
+    Center:<input type="text" id="center">  </input> <br>
+    Submit <button id="Submit">  </button> <br>
   </form>
  </body>
 </html>
