Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,7 +13,7 @@
     Small Forward:<input type="text" id="small_forward">  </input> <br>
     Power Forward:<input type="text" id="power_forward">  </input> <br>
     Center:<input type="text" id="center">  </input> <br>
-    Submit <button id="Submit" action="submit" >  </button> <br>
+    Submit <button id="Submit" action="submit" >  Submit </button> <br>
   </form>
  </body>
 </html>
