Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,7 +8,7 @@
   <form action="/team" method="post">
     Team Name:<input type="text" id="team_name">  </input> <br>
     Coach:<input type="text" id="coach">  </input> <br>
-    Point Guard:<input type="text" id="point_guard">  </input> <br>
+    Point Guard:<input type="text" id=":point_guard">  </input> <br>
     Shooting Guard:<input type="text" id="shooting_guard">  </input> <br>
     Small Forward:<input type="text" id="small_forward">  </input> <br>
     Power Forward:<input type="text" id="power_forward">  </input> <br>
