Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,14 +6,14 @@
  </head>
  <body>
   <form action="/team" method="post">
-    Team Name:<input type="text" id="team_name">  </input> <br>
-    Coach:<input type="text" id="coach">  </input> <br>
-    Point Guard:<input type="text" id=":point_guard">  </input> <br>
-    Shooting Guard:<input type="text" id="shooting_guard">  </input> <br>
-    Small Forward:<input type="text" id="small_forward">  </input> <br>
-    Power Forward:<input type="text" id="power_forward">  </input> <br>
-    Center:<input type="text" id="center">  </input> <br>
-    Submit <button id="Submit" action="submit" >  Submit </button> <br>
+    Team Name:<input type="text" name="team_name">  </input> <br>
+    Coach:<input type="text" name="coach">  </input> <br>
+    Point Guard:<input type="text" name=":point_guard">  </input> <br>
+    Shooting Guard:<input type="text" name="shooting_guard">  </input> <br>
+    Small Forward:<input type="text" name="small_forward">  </input> <br>
+    Power Forward:<input type="text" name="power_forward">  </input> <br>
+    Center:<input type="text" name="center">  </input> <br>
+    Submit <button name="Submit" action="submit" >  Submit </button> <br>
   </form>
  </body>
 </html>
