Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-  <form action="/team" method="post">
+  <form action="/team" method="POST">
     Team Name:<input type="text" name="team_name">  </input> <br>
     Coach:<input type="text" name="coach">  </input> <br>
     Point Guard:<input type="text" name=":point_guard">  </input> <br>
