Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,7 +13,7 @@
     Small Forward:<input type="text" name="small_forward">  </input> <br>
     Power Forward:<input type="text" name="power_forward">  </input> <br>
     Center:<input type="text" name="center">  </input> <br>
-     <input id="Submit" TYPE="submit" >  Submit </input> <br>
+     <input id="Submit" TYPE="submit" >  </input> <br>
   </form>
  </body>
 </html>
