Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,14 +6,14 @@
  </head>
  <body>
   <form action="/team" method="POST">
-    Team Name:<input type="text" name=":team_name">  </input> <br>
-    Coach:<input type="text" name=":coach">  </input> <br>
-    Point Guard:<input type="text" name=":point_guard">  </input> <br>
-    Shooting Guard:<input type="text" name=":shooting_guard">  </input> <br>
-    Small Forward:<input type="text" name=":small_forward">  </input> <br>
-    Power Forward:<input type="text" name=":power_forward">  </input> <br>
-    Center:<input type="text" name=":center">  </input> <br>
-     <input id="Submit" TYPE="submit" >  </input> <br>
+    Team Name:<input type="text" name=:team_name>  </input> <br>
+    Coach:<input type="text" name=:coach>  </input> <br>
+    Point Guard:<input type="text" name=:point_guard>  </input> <br>
+    Shooting Guard:<input type="text" name=:shooting_guard >  </input> <br>
+    Small Forward:<input type="text" name=:small_forward>  </input> <br>
+    Power Forward:<input type="text" name=:power_forward>  </input> <br>
+    Center:<input type="text" name=:center>  </input> <br>
+     <input id="Submit" TYPE= "submit" >  </input> <br>
   </form>
  </body>
 </html>
