Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,11 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <br><br><br>
- <%= "#{@point_guard}" %>
- <br>
- <%= "#{@rams}" %>
-
+ team name <%= "#{@rams[":team_name"]}" %><br>
+ point guard<%= "#{@rams[":point_guard"]}" %><br>
+ shooting guard<%= "#{@rams[":shooting_guard"]}" %><br>
+ smasll forward<%= "#{@rams[":small_forward"]}" %><br>
+ power forward<%= "#{@rams[":power_forward"]}" %><br>
+ center <%= "#{@rams[":center"]}" %><br>
  </body>
 </html>
