Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
- team name <%= "#{@rams[":team_name"]}" %><br>
+ team name <%= "#{@rams[":name"]}" %><br>
  point guard <%= "#{@rams[":point_guard"]}" %><br>
  shooting guard <%= "#{@rams[":shooting_guard"]}" %><br>
  smasll forward <%= "#{@rams[":small_forward"]}" %><br>
