--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,7 +8,7 @@
   <form action="/team" method="POST">
     Team Name:<input type="text" name=:name>  </input> <br>
     Coach:<input type="text" name=:coach>  </input> <br>
-    Point Guard:<input type="text" name=:point_guard>  </input> <br>
+    Point Guard:<input type="text" name=:pg>  </input> <br>
     Shooting Guard:<input type="text" name=:shooting_guard >  </input> <br>
     Small Forward:<input type="text" name=:small_forward>  </input> <br>
     Power Forward:<input type="text" name=:power_forward>  </input> <br>
