Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -11,7 +11,7 @@
     Point Guard:<input type="text" name=:pg>  </input> <br>
     Shooting Guard:<input type="text" name=:shooting_guard >  </input> <br>
     Small Forward:<input type="text" name=:small_forward>  </input> <br>
-    Power Forward:<input type="text" name=:power_forward>  </input> <br>
+    Power Forward:<input type="text" name=:pf>  </input> <br>
     Center:<input type="text" name=:center>  </input> <br>
      <input id="Submit" TYPE= "submit" >  </input> <br>
   </form>
