Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -6,10 +6,10 @@
  </head>
  <body>
  team name <%= "#{@rams[":name"]}" %><br>
- point guard <%= "#{@rams[":point_guard"]}" %><br>
+ point guard <%= "#{@rams[":pg"]}" %><br>
  shooting guard <%= "#{@rams[":shooting_guard"]}" %><br>
  smasll forward <%= "#{@rams[":small_forward"]}" %><br>
- power forward <%= "#{@rams[":power_forward"]}" %><br>
+ power forward <%= "#{@rams[":pf"]}" %><br>
  center <%= "#{@rams[":center"]}" %><br>
  </body>
 </html>
