Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
   <form action="/team" method="POST">
-    Name:<input type="text" name=:name>  </input> <br>
+    Name:<input type="text" name="name">  </input> <br>
     Coach:<input type="text" name=:coach>  </input> <br>
     Point Guard:<input type="text" name=:pg>  </input> <br>
     Shooting Guard:<input type="text" name=:shooting_guard >  </input> <br>
