--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,12 +7,12 @@
  <body>
   <form action="/team" method="POST">
     Name:<input type="text" name="name">  </input> <br>
-    Coach:<input type="text" name=:coach>  </input> <br>
-    Point Guard:<input type="text" name=:pg>  </input> <br>
-    Shooting Guard:<input type="text" name=:shooting_guard >  </input> <br>
-    Small Forward:<input type="text" name=:small_forward>  </input> <br>
-    Power Forward:<input type="text" name=:pf>  </input> <br>
-    Center:<input type="text" name=:center>  </input> <br>
+    Coach:<input type="text" name="coach">  </input> <br>
+    Point Guard:<input type="text" name="pg">  </input> <br>
+    Shooting Guard:<input type="text" name="shooting_guard" >  </input> <br>
+    Small Forward:<input type="text" name="small_forward">  </input> <br>
+    Power Forward:<input type="text" name="pf">  </input> <br>
+    Center:<input type="text" name="center">  </input> <br>
      <input id="Submit" TYPE= "submit" >  </input> <br>
   </form>
  </body>
