Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,10 +9,10 @@
     Name:<input type="text" name="name">  </input> <br>
     Coach:<input type="text" name="coach">  </input> <br>
     Point Guard:<input type="text" name="pg">  </input> <br>
-    Shooting Guard:<input type="text" name="shooting_guard" >  </input> <br>
-    Small Forward:<input type="text" name="small_forward">  </input> <br>
+    Shooting Guard:<input type="text" name="sg" >  </input> <br>
+    Small Forward:<input type="text" name="sf">  </input> <br>
     Power Forward:<input type="text" name="pf">  </input> <br>
-    Center:<input type="text" name="center">  </input> <br>
+    Center:<input type="text" name="c">  </input> <br>
      <input id="Submit" TYPE= "submit" >  </input> <br>
   </form>
  </body>
