--- a/views/team.erb
+++ b/views/team.erb
@@ -7,9 +7,9 @@
  <body>
  team name <%= "#{@rams[":name"]}" %><br>
  point guard <%= "#{@rams[":pg"]}" %><br>
- shooting guard <%= "#{@rams[":shooting_guard"]}" %><br>
- smasll forward <%= "#{@rams[":small_forward"]}" %><br>
- power forward <%= "#{@rams[":pf"]}" %><br>
- center <%= "#{@rams[":center"]}" %><br>
+ shooting guard <%= "#{@rams["sg"]}" %><br>
+ smasll forward <%= "#{@rams["sf"]}" %><br>
+ power forward <%= "#{@rams["pf"]}" %><br>
+ center <%= "#{@rams["c"]}" %><br>
  </body>
 </html>
