Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,8 @@
   <title>Basketball Team</title>
  </head>
  <body>
- team name <%= "#{@rams[":name"]}" %><br>
+ Team Name:<%= "#{@rams[":name"]}" %><br>
+ Coach:<%= "#{@rams[":coach"]}" %><br>
  point guard <%= "#{@rams[":pg"]}" %><br>
  shooting guard <%= "#{@rams["sg"]}" %><br>
  smasll forward <%= "#{@rams["sf"]}" %><br>
