Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,9 @@
   <title>Basketball Team</title>
  </head>
  <body>
- Team Name:<%= "#{@rams[":name"]}" %><br>
- Coach:<%= "#{@rams[":coach"]}" %><br>
- point guard <%= "#{@rams[":pg"]}" %><br>
+ Team Name:<%= "#{@rams["name"]}" %><br>
+ Coach:<%= "#{@rams["coach"]}" %><br>
+ point guard <%= "#{@rams["pg"]}" %><br>
  shooting guard <%= "#{@rams["sg"]}" %><br>
  smasll forward <%= "#{@rams["sf"]}" %><br>
  power forward <%= "#{@rams["pf"]}" %><br>
