Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -7,10 +7,10 @@
  <body>
  Team Name:<%= "#{@rams["name"]}" %><br>
  Coach:<%= "#{@rams["coach"]}" %><br>
- point guard <%= "#{@rams["pg"]}" %><br>
- shooting guard <%= "#{@rams["sg"]}" %><br>
- smasll forward <%= "#{@rams["sf"]}" %><br>
- power forward <%= "#{@rams["pf"]}" %><br>
- center <%= "#{@rams["c"]}" %><br>
+ Point Guard:<%= "#{@rams["pg"]}" %><br>
+ Shooting Guard:<%= "#{@rams["sg"]}" %><br>
+ Small Forward:<%= "#{@rams["sf"]}" %><br>
+ power Forward:<%= "#{@rams["pf"]}" %><br>
+ Center:<%= "#{@rams["c"]}" %><br>
  </body>
 </html>
