Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -10,7 +10,7 @@
  Point Guard:<%= "#{@rams["pg"]}" %><br>
  Shooting Guard:<%= "#{@rams["sg"]}" %><br>
  Small Forward:<%= "#{@rams["sf"]}" %><br>
- power Forward:<%= "#{@rams["pf"]}" %><br>
+ Power Forward:<%= "#{@rams["pf"]}" %><br>
  Center:<%= "#{@rams["c"]}" %><br>
  </body>
 </html>
